--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://w7.pngwing.com/pngs/119/695/png-transparent-blogger-computer-icons-desktop-logo-blogger-logo-icons-no-attribution-miscellaneous-rectangle-wordpresscom-thumbnail.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
